--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,9 +3,18 @@
       package="com.nongraphical.velometer"
       android:versionCode="1"
       android:versionName="1.0">
+    <uses-sdk android:minSdkVersion="11"
+        android:targetSdkVersion="17"
+        />
+    
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
         <activity android:name="MainActivity"
-                  android:label="@string/app_name">
+                  android:label="@string/app_name"
+                  android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
